--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,5 +2,6 @@
 
 export(example_sb_call)
 export(run_histograms)
+export(run_single_slit)
 importFrom(coprimer,stern_brocot)
 importFrom(ggplot2,ggplot)
