--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,7 @@ Authors@R: person("Your", "Name", role = c("aut", "cre"), email = "your@email.co
 Description: More about what it does (maybe more than one line).
 Imports: 
     shiny,
+    shinyWidgets,
     ggplot2,
     coprimer
 Remotes: 
